Changelog
#########

2.0a3 - Unreleased
==================


2.0a2 - 2009-12-02
==================

- Attempt to Acquisition unwrap the context but allow the (potentially)
  wrapped object through if unwrapping fails. This closes
  http://dev.plone.org/old/plone/ticket/9796.
  [matthewwilkes]

- Adjust the reindex tests for the change I just made in Archetypes.
  [davisagli]

- Remove the eventType field and merge it into the subject field.
  Closes http://dev.plone.org/old/plone/ticket/5058.
  [rossp]

2.0a1 - 2009-11-18
==================

- Pass an _initializing_ flag when updating fields on object initialization,
  to avoid indexing twice (since CMF indexes on the item's ObjectAddedEvent,
  which now takes place after the call to initializeArchetype).
  [davisagli]

- Replaced date criterion "ago/from now" by "in the past/in the future".
  [vincentfretin]

- help_criteria_field_name msgid was used twice but with different default
  messages. Fixed that.
  [vincentfretin]

- Made ATImage compute its ID from its title if provided. Closes
  http://dev.plone.org/old/plone/ticket/9186.
  [erikrose]

- Changed the canonical location of interfaces to be in a subpackage called
  interfaces in its standard plural form. Leave BBB imports behind in
  interface.py.
  [hannosch, davisagli, witsch]

- Updated the ATCT tool upgrade to register the new tool with the portal
  site manager.
  [davisagli]

- Subtopics shouldn't always acquire the 'start' query. Fixes  
  https://dev.plone.org/plone/ticket/8827  
  [pelle]

- Use correct location for IObjectEvent.
  [hannosch]

- Removed test only PluggableAuthService dependency.
  [hannosch]

- Moved content type specific GenericSetup related functionality from CMFPlone
  into this package.
  [hannosch]

- Drop the dependency on simplejson. It's integrated into Python 2.6 as json.
  [hannosch]

- Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]
